--- a/.nwabaprc
+++ b/.nwabaprc
@@ -2,11 +2,11 @@
     "base": "./dist",
     "conn_usestrictssl" : false,
     "conn_server": "http://vhcalakeci.artihcus.com:50600",
-    "conn_client" : "400",
-    "conn_user": "NaveenM",
-    "conn_password": "Naveen@123",
+    "conn_client" : "100",
+    "conn_user": "lakshmiv",
+    "conn_password": "Kalyani@f0004",
     "abap_package": "$TMP",
-    "abap_bsp": "Z_RF_SAMPLE",
+    "abap_bsp": "Z_RFRHU",
     "abap_bsp_text": "UI5 upload through VSCode App",
-    "abap_transport": "AKEK903618"
+    "abap_transport": "AKEK903776"
 }
