--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -15,6 +15,17 @@
       "version": "1.16.5",
       "toolsId": "0a41e998-d250-40f0-b93e-39d1769a026c"
     },
+    "dataSources": {
+      "mainService": {
+        "uri": "/sap/opu/odata/sap/ZEWM_PR_RHUBYASN_SRV/",
+        "type": "OData",
+        "settings": {
+          "annotations": [],
+          "localUri": "localService/mainService/metadata.xml",
+          "odataVersion": "2.0"
+        }
+      }
+    },
     "crossNavigation": {
       "inbounds": {
         "rf_app-display": {
@@ -64,6 +75,11 @@
         "settings": {
           "bundleName": "ns.rfapp.i18n.i18n"
         }
+      },
+      "": {
+        "dataSource": "mainService",
+        "preload": true,
+        "settings": {}
       }
     },
     "resources": {
@@ -89,72 +105,52 @@
         {
           "name": "RouteASNSCANFIRST",
           "pattern": ":?query:",
-          "target": [
-            "TargetASNSCANFIRST"
-          ]
+          "target": ["TargetASNSCANFIRST"]
         },
         {
           "name": "StandardSecond",
           "pattern": "StandardSecond",
-          "target": [
-            "StandardSecond"
-          ]
+          "target": ["StandardSecond"]
         },
         {
           "name": "Second",
           "pattern": "Second",
-          "target": [
-            "Second"
-          ]
+          "target": ["Second"]
         },
         {
           "name": "Third",
           "pattern": "Third",
-          "target": [
-            "Third"
-          ]
+          "target": ["Third"]
         },
         {
           "name": "Fourth",
           "pattern": "Fourth",
-          "target": [
-            "Fourth"
-          ]
+          "target": ["Fourth"]
         },
         {
           "name": "Fifth",
           "pattern": "Fifth",
-          "target": [
-            "Fifth"
-          ]
+          "target": ["Fifth"]
         },
         {
           "name": "Sixth",
           "pattern": "Sixth",
-          "target": [
-            "Sixth"
-          ]
+          "target": ["Sixth"]
         },
         {
           "name": "Seventh",
           "pattern": "Seventh",
-          "target": [
-            "Seventh"
-          ]
+          "target": ["Seventh"]
         },
         {
           "name": "ChangePackagingMaterial",
           "pattern": "ChangePackagingMaterial",
-          "target": [
-            "ChangePackagingMaterial"
-          ]
+          "target": ["ChangePackagingMaterial"]
         },
         {
           "name": "ChangeQty",
           "pattern": "ChangeQty",
-          "target": [
-            "ChangeQty"
-          ]
+          "target": ["ChangeQty"]
         }
       ],
       "targets": {
